[gd_scene load_steps=5 format=3 uid="uid://bpkemiqcmcn6t"]

[ext_resource type="FontFile" uid="uid://bt5pn0ptnei0q" path="res://fonts/Bungee/Bungee-Regular.ttf" id="1_ajox3"]
[ext_resource type="Script" path="res://scripts/delete_panel.gd" id="1_frhwk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vsx6c"]
bg_color = Color(0.988235, 0.952941, 0.92549, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w2ium"]
bg_color = Color(1, 0.72549, 0.141176, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="DeletePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_frhwk")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 110.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vsx6c")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 100.0
theme_override_styles/panel = SubResource("StyleBoxFlat_w2ium")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 110.0
theme_override_fonts/font = ExtResource("1_ajox3")
theme_override_font_sizes/font_size = 60
text = "DELETE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClickArea" type="Panel" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 320.0
offset_bottom = 110.0

[connection signal="gui_input" from="ClickArea" to="." method="_on_click_area_gui_input"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_click_area_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_click_area_mouse_exited"]
